# Akkon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flow.md  run.md
.github/workflows/: ci.yml  ci_advanced.yml
docs/: IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  MemoryDomainDesign.md  QUICK_REFERENCE.md  RUNTIME_IMPLEMENTATION.md  implementation_plan.md  interface.md  runtime_method.md
scripts/: test_lockdown.sh
sqlite/: shell.c
src/: Defines.h  RAM.md  Version.h  main.cpp
src/construction/: DatabaseInfo.h  MasterDB.cpp  MasterDB.h  Utils.cpp  Utils.h  flow.md
src/crypto/: Hash.cpp  Hash.h
src/db/: DataStorage.cpp  DataStorage.h  Entity.h
src/index/: BloomFilter.cpp  BloomFilter.h  QueryEngine.cpp  QueryEngine.h
src/logger/: README.md
src/memory/: Arena.cpp  Arena.h  ArenaAllocator.cpp  ArenaAllocator.h  ArenaAllocatorSTL.h  MemoryManager.cpp  MemoryManager.h  RAM.md  RuntimeDomain.h
src/monitor/: HealthMonitor.cpp  HealthMonitor.h  SystemMonitor.cpp  SystemMonitor.h
src/network/: Server.cpp  Server.h
src/network/protocols/: AkkonProtocolHandler.cpp  AkkonProtocolHandler.h  HttpHandler.cpp  HttpHandler.h  WebSocketHandler.cpp  WebSocketHandler.h
src/security/: LifecycleManager.cpp  LifecycleManager.h
src/shell/: ArgumentParser.cpp  ArgumentParser.h  ArgumentRegistry.cpp  ArgumentRegistry.h  IArgumentParser.h  IShell.h  Shell.cpp  Shell.h  ShellOptions.h
src/testsuite/: TestFramework.cpp  TestFramework.h
tests/: README.md  benchmark_1m.cpp  example_runtime_usage.cpp  test_akkon_basic.cpp  test_akkon_instance.cpp  test_arena_allocator.cpp  test_availability.cpp  test_bloom_filter.cpp  test_concurrency.cpp  test_database.cpp  test_database_integrity.cpp  test_hashing.cpp  test_memory_isolation.cpp  test_memory_safety.cpp  test_network.cpp  test_os_compatibility.cpp  test_runtime_examples.cpp
tests/deprecated/: README.md  test_ws_insert.py  test_ws_simple.py
tests/framework/: test_framework.cpp
tests/scripts/: run_all_tests.sh  run_benchmarks.sh  run_integration_tests.sh  run_test.sh  run_unit_tests.sh
vuln_server/: server.py
webview/: index.html  server.py
webview/css/: styles.css
webview/js/: app.js
